--- a/css/style.css
+++ b/css/style.css
@@ -2,43 +2,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 body {
+  background-color: black;
   line-height: 1.4;
   font-family: "Source Sans Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-image: url("../images/bg.jpeg");
-  background-color: #8E1326;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
+  -ms-overflow-style: none;  /* /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none;  /* Hide scrollbar for Firefox */
   overflow-y: scroll; /* Add the ability to scroll */
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-    display: none;
+.firstbanner {
+  background-image: url("../images/bg.jpeg");
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-repeat: no-repeat;
+  z-index: -40;
+  left: 0;
+  top: 0;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+.more_details {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 90%;
+  text-align : center;
+  color: white;
+  font-size: 40px;
+  font-family: 'Shadows Into Light', cursive;
+}
+
+.aboutinnertext {
+  opacity: 0%;
+}
+
+.secondbanner {
+  /*
+  text-align : center;
+  font-family: 'Shadows Into Light', cursive;
+   background-image: url("https://www.kirupa.com/images/blue_square.svg");
+    background-size: 10%;*/
+  background-color: black;
+  left: 0;
+  font-size: 40px;
+  color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-repeat: no-repeat;
+  z-index: -20;
+  background-position:  bottom;
+  top: 120vw;
+  opacity: 1;
 }
 
 .welcome-content {
   color: #C0C0C0;
   font-size: 40px;
-  font-family: 'Caveat', cursive;
+  /* font-family: 'Caveat', cursive; */
+  font-family: 'Shadows Into Light', cursive;
 }
 
 .portfolio-content {
   position: relative;
-  top: 370px;
+  top: 3000px;
   text-align : right;
   color: #C0C0C0;
-  /*color: #8E1326;
-  /*color: #063169;
-  font-family: 'Caveat', cursive;*/
+/*  font-family: 'Caveat', cursive; */
   font-size: 40px;
   font-family: 'Shadows Into Light', cursive;
 }
@@ -48,17 +80,48 @@ body {
  font-family: 'Shadows Into Light', cursive;
  }
 
-.logo {
- max-width: 100%;
- max-height: 100%;
- height: 600px;
- width: 1000px;
+.yellowcircle {
+  background-image: url("https://www.kirupa.com/images/yellow_circle.svg");
+  background-size: 20%;
+  width: 100vw;
+  height: 100vw;
+  position: fixed;
+  background-repeat: no-repeat;
+  z-index: -10;
+  background-position: center 60%;
+  top: 0;
+  opacity: .75;
 }
 
-img {
- height: 100%;
- width: 100%;
- object-fit: contain;
+.bluesquare {
+  background-image: url("https://www.kirupa.com/images/blue_square.svg");
+  background-size: 10%;
+  width: 100vw;
+  height: 100vw;
+  position: fixed;
+  background-repeat: no-repeat;
+  z-index: -20;
+  background-position: 97% bottom;
+  top: 0;
+  opacity: .75;
+}
+
+.greenpentagon {
+  background-image: url("https://www.kirupa.com/images/green_pentagon.svg");
+  background-size: 50%;
+  width: 100vw;
+  height: 100vw;
+  position: fixed;
+  background-repeat: no-repeat;
+  z-index: -30;
+  background-position: left 100%;
+  top: 0;
+  opacity: .75;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
 }
 
 /* Extra small devices (phones, 600px and down) */
